--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "flash-express": "^1.0.4",
+    "mongoose": "^7.4.2",
+    "morgan": "^1.10.0"
   }
 }
